--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,12 +4,13 @@
 <meta charset="utf-8">
 <!-- RESPONSIVE  -->
 <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
+<meta name="keywords" content="Microelectronica, Reparacion de notebook, Reballing, Contacto" >
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 <link rel="shortcut icon" href="../assets/img/104383138_106962451064031_7096187030141025032_n.png">
 <!-- Mis Estitlos  -->
 <link rel="stylesheet" href="../css/style.css">
 <title>Contacto-SMG Microelectronica</title>
-<meta name="description" content="Apartado de contacto">
+<meta name="description" content="Apartado de contacto y ubicación para poder brindarte nuestros servicios">
 </head>
 <body id="gridAreas">
     <header>
@@ -26,7 +27,7 @@
         </section>
     </header>
 
-        <h2>Contacto</h2>
+        <h1>Contacto</h1>
 <article>
         <div id="contactos">
             <p class="formulario ">Dirección: Av.Alcorta 2428, Moreno, Provincia de Buenos Aires</p>
