--- a/pages/porfolio.html
+++ b/pages/porfolio.html
@@ -4,10 +4,9 @@
 <meta charset="utf-8">
 <!-- RESPONSIVE  -->
 <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
+<meta name="keywords" content="Microelectronica, Reparacion de notebook, Reballing, Porfolio" >
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 <link rel="shortcut icon" href="../assets/img/104383138_106962451064031_7096187030141025032_n.png">
-<!-- Boobstrap Local  -->
-<link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
 <!-- Mis Estitlos  -->
 <link rel="stylesheet" href="../css/style.css">
 <title>Porfolio-SMG Microelectronica</title>
@@ -29,7 +28,7 @@
         <figure class="figure"></figure> <a href="../index.html"> <img src="../assets/img/Publicación de Facebook 250x138 px.jpg" class="figure-img img-fluid rounded" alt="logo"></figure></a> 
     </section>
 </header>
-<h2>Porfolio</h2>
+<h1>Porfolio</h1>
     <div  data-aos="flip-left"
     data-aos-easing="ease-out-cubic"
     data-aos-duration="2000" class="container-fluid ">
