--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <!-- RESPONSIVE  -->
 <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
+<meta name="keywords" content="Microelectronica, Reparacion de notebook, Reballing, Servicios" >
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 <link rel="shortcut icon" href="../assets/img/104383138_106962451064031_7096187030141025032_n.png">
 <!-- Mis Estitlos  -->
@@ -26,7 +27,7 @@
                     <figure class="figure"></figure> <a href="../index.html"> <img src="../assets/img/Publicación de Facebook 250x138 px.jpg" class="figure-img img-fluid rounded" alt="logo"></figure></a> 
                 </section>
         </header>
-<h2>Servicios </h2>
+<h1>Servicios </h1>
 <main data-aos="flip-left"
 data-aos-easing="ease-out-cubic"
 data-aos-duration="2000" class="grid">
