--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -4,12 +4,13 @@
 <meta charset="utf-8">
 <!-- RESPONSIVE  -->
 <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
+<meta name="keywords" content="Microelectronica, Reparacion de notebook, Reballing, quienes-somos" >
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 <link rel="shortcut icon" href="../assets/img/104383138_106962451064031_7096187030141025032_n.png">
 <!-- Mis Estitlos  -->
 <link rel="stylesheet" href="../css/style.css">
 <title>Quienes somos-SMG Microelectronica</title>
-<meta name="description" content="Quienes somos">
+<meta name="description" content="Quienes somos, y como surgio nuestra propuesta">
 </head>
 <body id="gridAreas">
     <header>
@@ -25,7 +26,7 @@
                     <figure class="figure"></figure> <a href="../index.html"> <img src="../assets/img/Publicación de Facebook 250x138 px.jpg" class="figure-img img-fluid rounded" alt="logo"></figure></a> 
                 </section>
     </header>
-    <h2>Quienes Somos</h2>     
+    <h1>Quienes Somos</h1>     
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, aperiam amet. Eaque nostrum dignissimos praesentium quia doloremque expedita nobis ipsum assumenda fuga voluptate. Repellat nam at recusandae sint ducimus dolore. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, rerum placeat. Non est incidunt facilis, ad unde magnam similique veniam dolore dolores ipsum eveniet dolorum quod quos rem omnis sapiente! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore, eligendi architecto rem quia illo magni voluptates, ipsa maxime voluptate asperiores sapiente non obcaecati, consectetur officiis eos laborum cupiditate blanditiis? In!</p>
 <footer>
     <section>
